--- a/src/index.css
+++ b/src/index.css
@@ -29,12 +29,13 @@ body {
   border-top-right-radius: 999px;
 }
 
-.striped {
-  background: repeating-linear-gradient(
-    45deg,
-    white,
-    white 10px,
-    black 10px,
-    black 20px
-  );
+.polka-dot {
+  background-image: radial-gradient(#000000 20%, transparent 20%),
+    radial-gradient(#ffffff 20%, transparent 20%);
+  background-size: 20px 20px;
+}
+
+.polka-dot.dark {
+  background-image: radial-gradient(#ffffff 20%, transparent 20%),
+    radial-gradient(#000000 20%, transparent 20%);
 }
